--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/styles.css" />
     <script type="module" src="/script.js"></script>
   </head>
-  <body>
-    <div class="overlay"></div>
+  <body class="disable-scroll">
+    <div class="overlay background-effect"></div>
     <div class="content">
       <div class="top-main-container">
         <div class="top-container">
