adjusted rest of page to new layout

--- a/projects/index.html
+++ b/projects/index.html
@@ -9,97 +9,103 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="top-main-container">
-      <div class="top-container">
-        <header>
-          <a href="/">Tim Spitzer</a>
-        </header>
-        <nav>
+    <div class="content">
+      <div class="top-main-container">
+        <div class="top-container">
+          <header>
+            <a href="/">Tim Spitzer</a>
+          </header>
+          <nav>
+            <ul>
+              <li><a href="/projects/">Projects</a></li>
+              <li><a href="/blog/">Blog</a></li>
+              <li><a href="/about/">About</a></li>
+            </ul>
+          </nav>
+        </div>
+        <main>
+          <article>
+            <a href="/projects/project-5/">
+              <h2>Project 5</h2>
+              <time><small>14.12.2020</small></time>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
+                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
+                dolore.
+              </p>
+              <p>Read more.. »</p>
+            </a>
+          </article>
+          <article>
+            <a href="/projects/project-5/">
+              <h2>Project 4</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
+                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
+                dolore.
+              </p>
+              <p>Read more.. »</p>
+            </a>
+          </article>
+          <article>
+            <a href="/projects/project-5/">
+              <h2>Project 3</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
+                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
+                dolore.
+              </p>
+              <p>Read more.. »</p>
+            </a>
+          </article>
+          <article>
+            <a href="/projects/project-5/">
+              <h2>Project 2</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
+                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
+                dolore.
+              </p>
+              <p>Read more.. »</p>
+            </a>
+          </article>
+          <article>
+            <a href="/projects/project-5/">
+              <h2>Project 1</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
+                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
+                dolore.
+              </p>
+              <p>Read more.. »</p>
+            </a>
+          </article>
+        </main>
+      </div>
+      <footer>
+        <div><small>© 2022 Tim Spitzer</small></div>
+        <div>
           <ul>
-            <li><a href="/projects/">Projects</a></li>
-            <li><a href="/blog/">Blog</a></li>
+            <li>
+              <a href="/projects/"><small>Projects</small></a>
+            </li>
+            <li>
+              <a href="/blog/"><small>Blog</small></a>
+            </li>
+            <li>
+              <a href="/about/"><small>About</small></a>
+            </li>
+            <li>
+              <a href="/imprint/"><small>Imprint</small></a>
+            </li>
           </ul>
-        </nav>
-      </div>
-      <main>
-        <article>
-          <a href="/projects/project-5/">
-            <h2>Project 5</h2>
-            <time><small>14.12.2020</small></time>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-              voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-              minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-              dolore.
-            </p>
-            <p>Read more.. »</p>
-          </a>
-        </article>
-        <article>
-          <a href="/projects/project-5/">
-            <h2>Project 4</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-              voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-              minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-              dolore.
-            </p>
-            <p>Read more.. »</p>
-          </a>
-        </article>
-        <article>
-          <a href="/projects/project-5/">
-            <h2>Project 3</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-              voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-              minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-              dolore.
-            </p>
-            <p>Read more.. »</p>
-          </a>
-        </article>
-        <article>
-          <a href="/projects/project-5/">
-            <h2>Project 2</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-              voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-              minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-              dolore.
-            </p>
-            <p>Read more.. »</p>
-          </a>
-        </article>
-        <article>
-          <a href="/projects/project-5/">
-            <h2>Project 1</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-              voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-              minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-              dolore.
-            </p>
-            <p>Read more.. »</p>
-          </a>
-        </article>
-      </main>
+        </div>
+      </footer>
     </div>
-    <footer>
-      <div><small>© 2022 Tim Spitzer</small></div>
-      <div>
-        <ul>
-          <li>
-            <a href="/projects/"><small>Projects</small></a>
-          </li>
-          <li>
-            <a href="/blog/"><small>Blog</small></a>
-          </li>
-          <li>
-            <a href="/imprint/"><small>Imprint</small></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
   </body>
 </html>
