--- a/index.html
+++ b/index.html
@@ -21,67 +21,52 @@
             <ul>
               <li><a href="/projects/">Projects</a></li>
               <li><a href="/blog/">Blog</a></li>
+              <li><a href="/about/">About</a></li>
             </ul>
           </nav>
         </div>
         <main>
           <article>
             <h1>
-              Hi, I am Tim.<br />
-              <mark class="bg-yellow over-overlay">Frontend Developer</mark> and
+              <span id="short-intro-text" class="color-white over-overlay"
+                >Hi, I am Tim.</span
+              ><br />
+              <mark class="bg-color-1 over-overlay">Frontend Developer</mark>
+              and
               <br />
-              <mark class="bg-green over-overlay">
+              <mark class="bg-color-2 over-overlay">
                 Digital Media and Technology</mark
               >
               graduate
             </h1>
             <p>
-              I am 27 and studied at Technical University Berlin. Alongside my
-              studies I worked with senior designers and developers on products,
-              such as WebRTC-based video conferencing, in-store video
-              surveillance and online consultation apps.
+              I'm a software engineeer from Berlin. I previously worked at
+              <a href="https://spreewunder.com">Spreewunder</a> building
+              progressive web apps. I like to create products that work well,
+              look nice and are easy-to-use. My goal is to create high quality
+              products with clean and maintainable code.
             </p>
             <p>
-              I strive to create high quality products that are easy to use,
-              with maintainable and easy to understand code as a foundation.
-            </p>
-            <p>
-              I try to keep busy by building projects on my own. You can find
-              them
-              <a href="/projects/">here</a> or read up on my
+              Check out my
+              <a href="/projects/">projects</a> or read up on my
               <a href="/blog/">blog</a> posts.
             </p>
-          </article>
-          <article>
-            <h1>My skills include</h1>
-            <p>
-              Apart from the courses included in my degree I have the following
-              skills:
-            </p>
-            Note: add icons for each element
-            <ul class="skills-list">
-              <li>Javascript ES6</li>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>WebComponents (LitElement)</li>
-              <li>React</li>
-              <li>Redux</li>
-              <li>TailwindCSS</li>
-              <li>Rollup</li>
-              <li>Git</li>
-            </ul>
           </article>
         </main>
       </div>
       <footer>
         <div><small>© 2022 Tim Spitzer</small></div>
         <div>
+          <!-- TODO: Maybe replave with social links -->
           <ul>
             <li>
               <a href="/projects/"><small>Projects</small></a>
             </li>
             <li>
               <a href="/blog/"><small>Blog</small></a>
+            </li>
+            <li>
+              <a href="/about/"><small>About</small></a>
             </li>
             <li>
               <a href="/imprint/"><small>Imprint</small></a>
