adjusted logo size

--- a/index.html
+++ b/index.html
@@ -27,20 +27,17 @@
         </div>
         <main>
           <article>
-            <h1>
-              <span id="short-intro-text" class="color-white over-overlay"
-                >Hi, I am Tim.</span
-              ><br />
-              <mark class="bg-color-1 over-overlay">Frontend Developer</mark>
+            <h1 id="short-intro-text" class="color-white over-overlay">
+              Hi, I am Tim.<br />
+              <mark class="bg-color-1">Frontend Developer</mark>
               and
               <br />
-              <mark class="bg-color-2 over-overlay">
-                Digital Media and Technology</mark
-              >
+
+              <mark class="bg-color-2"> Digital Media and Technology</mark>
               graduate
             </h1>
             <p>
-              I'm a software engineeer from Berlin. I previously worked at
+              I'm a software engineer from Berlin. I previously worked at
               <a href="https://spreewunder.com">Spreewunder</a> building
               progressive web apps. I like to create products that work well,
               look nice and are easy-to-use. My goal is to create high quality
