--- a/about/index.html
+++ b/about/index.html
@@ -29,18 +29,18 @@
           <article>
             <h1>About</h1>
             <p>
-              I'm Tim Spitzer, and I am a freelance developer based in Berlin. I
-              recently completed my degree in Digital Media and Technology from
-              the Technical University Berlin. I have previously worked as a
+              I'm Tim Spitzer, and I am a developer based in Berlin. I recently
+              completed my degree in Digital Media and Technology from the
+              Technical University Berlin. I have previously worked as a
               software engineer at
-              <a href="https://spreeewunder.com">Spreewunder</a> and am
+              <a href="https://spreeewunder.com">Spreewunder</a> and I am
               currently working as freelance web developer.
             </p>
             <p>Some areas of development that I am passionate about are:</p>
             <ul>
               <li>Creating efficient and accessible websites</li>
               <li>Designing cross-platform applications</li>
-              <li>Having great developer <i>and</i> user experience</li>
+              <li>Having great developer and user experience</li>
             </ul>
           </article>
         </main>
