--- a/about/index.html
+++ b/about/index.html
@@ -7,10 +7,8 @@
     <title>Tim Spitzer - About</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
-    <script type="module" src="/script.js"></script>
   </head>
-  <body class="disable-scroll">
-    <div class="overlay background-effect"></div>
+  <body>
     <div class="content">
       <div class="top-main-container">
         <div class="top-container">
@@ -42,6 +40,10 @@
               <li>Designing cross-platform applications</li>
               <li>Having great developer and user experience</li>
             </ul>
+            <p>
+              You can contact me at
+              <a href="mailto:mail@timspitzer.com">mail@timspitzer.com</a>.
+            </p>
           </article>
         </main>
       </div>
