added margin-bottom to all articles

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tim Spitzer - Imprint</title>
+    <title>Imprint - Tim Spitzer</title>
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>Imprint index.html works</h1>
+    <div class="content">
+      <div class="top-main-container">
+        <div class="top-container">
+          <header>
+            <a href="/">Tim Spitzer</a>
+          </header>
+          <nav>
+            <ul>
+              <li><a href="/projects/">Projects</a></li>
+              <li><a href="/blog/">Blog</a></li>
+              <li><a href="/about/">About</a></li>
+            </ul>
+          </nav>
+        </div>
+        <main>
+          <article>
+            <h1>Imprint</h1>
+            <p>
+              Tim Spitzer <br />
+              Sandbühl 1 <br />
+              92237 Sulzbach-Rosenberg
+            </p>
+            <p>
+              Telefon: +49 152 02032615 <br />
+              E-mail:
+              <a href="mailto:mail@timspitzer.com">mail@timspitzer.com</a>
+            </p>
+          </article>
+        </main>
+      </div>
+      <footer>
+        <div><small>© 2022 Tim Spitzer</small></div>
+        <div>
+          <ul>
+            <li>
+              <a href="/projects/"><small>Projects</small></a>
+            </li>
+            <li>
+              <a href="/blog/"><small>Blog</small></a>
+            </li>
+            <li>
+              <a href="/about/"><small>About</small></a>
+            </li>
+            <li>
+              <a href="/imprint/"><small>Imprint</small></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
