removed sitelinks in footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <p>
               Check out my
               <a href="/projects/">projects</a> or read up on my
-              <a href="/blog/">blog</a> posts.
+              <a href="/blog/">blog</a> posts or contact me directly at
+              <a href="mailto:mail@timspitzer.com">mail@timspitzer.com</a>.
             </p>
           </article>
         </main>
@@ -56,15 +57,6 @@
         <div>
           <!-- TODO: Maybe replave with social links -->
           <ul>
-            <li>
-              <a href="/projects/"><small>Projects</small></a>
-            </li>
-            <li>
-              <a href="/blog/"><small>Blog</small></a>
-            </li>
-            <li>
-              <a href="/about/"><small>About</small></a>
-            </li>
             <li>
               <a href="/imprint/"><small>Imprint</small></a>
             </li>
