--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tim Spitzer - About</title>
+    <title>About - Tim Spitzer</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
@@ -27,14 +27,14 @@
           <article>
             <h1>About</h1>
             <p>
-              I'm Tim Spitzer, and I am a developer based in Berlin. I recently
-              completed my degree in Digital Media and Technology from the
-              Technical University Berlin. I have previously worked as a
-              software engineer at
+              I'm Tim Spitzer, developer based in Berlin. I recently completed
+              my degree in Digital Media and Technology from the Technical
+              University Berlin. I have previously worked as a software engineer
+              at
               <a href="https://spreeewunder.com">Spreewunder</a> and I am
               currently working as freelance web developer.
             </p>
-            <p>Some areas of development that I am passionate about are:</p>
+            <p>I am passionate about:</p>
             <ul>
               <li>Creating efficient and accessible websites</li>
               <li>Designing cross-platform applications</li>
