removed blog section entirely

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           <nav>
             <ul>
               <li><a href="/projects/">Projects</a></li>
-              <li><a href="/blog/">Blog</a></li>
               <li><a href="/about/">About</a></li>
             </ul>
           </nav>
@@ -45,8 +44,7 @@
             </p>
             <p>
               Check out my
-              <a href="/projects/">projects</a> or read up on my
-              <a href="/blog/">blog</a> posts or contact me directly at
+              <a href="/projects/">projects</a> or contact me at
               <a href="mailto:mail@timspitzer.com">mail@timspitzer.com</a>.
             </p>
           </article>
