added simple css hover effecto to bg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="/script.js"></script>
   </head>
   <body class="disable-scroll">
-    <div class="overlay background-effect"></div>
+    <div class="overlay background"></div>
     <div class="content">
       <div class="top-main-container">
         <div class="top-container">
