added first project

--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,6 @@
           <nav>
             <ul>
               <li><a href="/projects/">Projects</a></li>
-
               <li><a href="/about/">About</a></li>
             </ul>
           </nav>
@@ -26,6 +25,11 @@
         <main>
           <article>
             <h1>About</h1>
+            <img
+              class="img-small"
+              src="./images/portrait.jpg"
+              alt="image of website author"
+            />
             <p>
               I'm Tim Spitzer, developer based in Berlin. I recently completed
               my degree in Digital Media and Technology from the Technical
@@ -48,7 +52,7 @@
         </main>
       </div>
       <footer>
-        <div><small>© 2022 Tim Spitzer</small></div>
+        <div><small>© 2023 Tim Spitzer</small></div>
         <div>
           <ul>
             <li>
