--- a/projects/index.html
+++ b/projects/index.html
@@ -18,77 +18,26 @@
           <nav>
             <ul>
               <li><a href="/projects/">Projects</a></li>
-
               <li><a href="/about/">About</a></li>
             </ul>
           </nav>
         </div>
         <main>
           <article>
-            <a href="/projects/project-5/">
-              <h2>Project 5</h2>
-              <time><small>14.12.2020</small></time>
+            <a href="/projects/project-1/">
+              <h1>Security Monitoring App</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-                dolore.
+                Videoüberwachung 2.0 is a surveillance software that aims to
+                provide a user-friendly and aesthetically pleasing solution for
+                monitoring a variety of cameras from different..
               </p>
-              <p>Read more.. »</p>
-            </a>
-          </article>
-          <article>
-            <a href="/projects/project-5/">
-              <h2>Project 4</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-                dolore.
-              </p>
-              <p>Read more.. »</p>
-            </a>
-          </article>
-          <article>
-            <a href="/projects/project-5/">
-              <h2>Project 3</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-                dolore.
-              </p>
-              <p>Read more.. »</p>
-            </a>
-          </article>
-          <article>
-            <a href="/projects/project-5/">
-              <h2>Project 2</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-                dolore.
-              </p>
-              <p>Read more.. »</p>
-            </a>
-          </article>
-          <article>
-            <a href="/projects/project-5/">
-              <h2>Project 1</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                voluptate laborum? Atque, quo doloribus nam deleniti alias ullam
-                minima quia vel nisi quis, ea, nobis voluptas eveniet unde optio
-                dolore.
-              </p>
-              <p>Read more.. »</p>
+              <small>Read more.. »</small>
             </a>
           </article>
         </main>
       </div>
       <footer>
-        <div><small>© 2022 Tim Spitzer</small></div>
+        <div><small>© 2023 Tim Spitzer</small></div>
         <div>
           <ul>
             <li>
