--- a/about/index.html
+++ b/about/index.html
@@ -32,8 +32,8 @@
             <p>
               I'm Tim Spitzer, developer based in Berlin. I recently completed
               my degree in Digital Media and Technology from the Technical
-              University Berlin. I have previously worked as a software engineer
-              at
+              University Berlin and the Free University of Berlin. I have
+              previously worked as a software engineer at
               <a href="https://spreeewunder.com">Spreewunder</a> and I am
               currently working as freelance web developer.
             </p>
