added project 2 and 3

--- a/projects/index.html
+++ b/projects/index.html
@@ -41,17 +41,49 @@
           </nav>
         </div>
         <main>
-          <article>
-            <a href="/projects/project-1/">
+          <a href="/projects/project-3/">
+            <article>
+              <h1>Video Conferencing App</h1>
+              SECUVID is a web-based video communication system that allows for
+              easy communication with enhanced confidentiality protection.
+              SECUVID uses end-to-end encryption to protect audio and video
+              data..
+              <img
+                src="/projects/project-3/images/call.webp"
+                alt="picture of the apps call screen"
+              />
+              <small>Read more.. »</small>
+            </article>
+          </a>
+          <a href="/projects/project-2/">
+            <article>
+              <h1>Video Consultation App</h1>
+              Videosprechstunde is a fully integrated video teletherapy solution
+              for mental health professionals and doctors. It allows them to
+              easily conduct online therapy sessions from any location by
+              meeting with..
+              <img
+                src="/projects/project-2/images/login.webp"
+                alt="picture of the apps login screen"
+              />
+              <small>Read more.. »</small>
+            </article>
+          </a>
+          <a href="/projects/project-1/">
+            <article>
               <h1>Security Monitoring App</h1>
               <p>
                 Videoüberwachung 2.0 is a surveillance software that aims to
                 provide a user-friendly and aesthetically pleasing solution for
                 monitoring a variety of cameras from different..
               </p>
+              <img
+                src="/projects/project-1/images/TV.webp"
+                alt="picture of the apps lockscreen"
+              />
               <small>Read more.. »</small>
-            </a>
-          </article>
+            </article>
+          </a>
         </main>
       </div>
       <footer>
