--- a/projects/project-1/index.html
+++ b/projects/project-1/index.html
@@ -54,31 +54,41 @@
               time at Spreewunder for
               <a href="https://www.adeck-systems.de">Adeck Systems GmbH</a>.
             </p>
-            <img src="./images/TV.webp" alt="picture of the apps lockscreen" />
+            <img
+              src="/projects/project-1/images/TV.webp"
+              alt="picture of the apps lockscreen"
+            />
             <h4>My contribution</h4>
             <p>
               As the frontend developer on the
               <a href="https://www.adeck-systems.de/produktportfolio"
                 >Videoüberwachung 2.0</a
               >
-              project, my role involved programming and designing the user
-              interface of the software.
+              project, my role involved working with other developers and the
+              design team to create the software.
             </p>
             <p>
-              This included working with the design team to create the overall
+              This included following the design guide to accomplish the overall
               look and feel of the software, as well as implementing the user
-              experience and navigation. I also developed interactive features
-              and visualizations to enhance the functionality of the software. I
+              experiencen. I also developed interactive features and
+              visualizations to enhance the functionality of the software. I
               worked closely with the backend developers to ensure that the
               frontend interface was properly integrated with the underlying
               system. My duties also included testing the software to ensure
               that it was user-friendly and performed well, as well as
               troubleshooting and debugging any issues that arose.
             </p>
+            <h4>Technologies</h4>
             <p>
-              I utilized my coding skills and understanding of user experience
-              design principles to contribute to the success of this project.
+              Throughout this project, I utilized and worked with several
+              technologies including, but not limited to:
             </p>
+            <ul>
+              <li>Angular</li>
+              <li>Zeplin</li>
+              <li>MQTT</li>
+              <li>ONVIF</li>
+            </ul>
           </article>
         </main>
       </div>
