added drop shadow

--- a/about/index.html
+++ b/about/index.html
@@ -42,6 +42,7 @@
         </div>
         <main>
           <article>
+            <h1>About</h1>
             <img
               class="img-small"
               src="./images/portrait.jpg"
