--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,7 @@
         <main>
           <a href="/projects/project-3/">
             <article>
-              <h1>Video Conferencing App</h1>
+              <h1>SECUVID</h1>
               SECUVID is a web-based video communication system that allows for
               easy communication with enhanced confidentiality protection.
               SECUVID uses end-to-end encryption to protect audio and video
@@ -57,7 +57,7 @@
           </a>
           <a href="/projects/project-2/">
             <article>
-              <h1>Video Consultation App</h1>
+              <h1>Videosprechstunde</h1>
               Videosprechstunde is a fully integrated video teletherapy solution
               for mental health professionals and doctors. It allows them to
               easily conduct online therapy sessions from any location by
@@ -71,7 +71,7 @@
           </a>
           <a href="/projects/project-1/">
             <article>
-              <h1>Security Monitoring App</h1>
+              <h1>Videoüberwachung 2.0</h1>
               <p>
                 Videoüberwachung 2.0 is a surveillance software that aims to
                 provide a user-friendly and aesthetically pleasing solution for
