--- a/projects/project-1/index.html
+++ b/projects/project-1/index.html
@@ -22,7 +22,7 @@
       href="/images/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Tim Spitzer - Security Monitoring Software</title>
+    <title>Tim Spitzer - Videoüberwachung 2.0</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
@@ -42,7 +42,7 @@
         </div>
         <main>
           <article>
-            <h1>Security Monitoring App</h1>
+            <h1>Videoüberwachung 2.0</h1>
             <h4>Project Description</h4>
             <p>
               <a href="https://www.adeck-systems.de/produktportfolio"
