--- a/projects/project-2/index.html
+++ b/projects/project-2/index.html
@@ -22,7 +22,7 @@
       href="/images/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Tim Spitzer - Video Consultation App</title>
+    <title>Tim Spitzer - Videosprechstunde</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
@@ -42,7 +42,7 @@
         </div>
         <main>
           <article>
-            <h1>Video Consultation App</h1>
+            <h1>Videosprechstunde</h1>
             <h4>Project Description</h4>
             <p>
               <a href="https://video.epikur.de/">Videosprechstunde</a>
