--- a/projects/index.html
+++ b/projects/index.html
@@ -44,7 +44,7 @@
           <a href="/projects/project-3/">
             <article>
               <h1>SECUVID</h1>
-              SECUVID is a web-based video communication system that allows for
+              SECUVIdD is a web-based video communication system that allows for
               easy communication with enhanced confidentiality protection.
               SECUVID uses end-to-end encryption to protect audio and video
               data..
