--- a/projects/index.html
+++ b/projects/index.html
@@ -44,9 +44,9 @@
           <a href="/projects/project-3/">
             <article>
               <h1>SECUVID</h1>
-              SECUVIdD is a web-based video communication system that allows for
+              SECUVID is a web-based video communication system that allows for
               easy communication with enhanced confidentiality protection.
-              SECUVID uses end-to-end encryption to protect audio and video
+              SECUVID uses end-to-en d encryption to protect audio and video
               data..
               <img
                 src="/projects/project-3/images/call.webp"
