--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         </div>
         <main>
           <article>
-            <h1 id="short-intro-text" class="color-white over-overlay">
+            <h1 id="short-intro-text" class="col-white over-overlay">
               Hi, I am Tim.<br />
-              <mark class="bg-color-1">Frontend Developer</mark>
+              <mark class="bg-col-yellow">Frontend Developer</mark>
               and
               <br />
-              <mark class="bg-color-2"> Digital Media and Technology</mark>
+              <mark class="bg-col-green"> Digital Media and Technology</mark>
               graduate
             </h1>
             <p>
