--- a/projects/project-2/index.html
+++ b/projects/project-2/index.html
@@ -22,7 +22,7 @@
       href="/images/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Tim Spitzer - Videosprechstunde</title>
+    <title>Videosprechstunde - Tim Spitzer</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
   </head>
