--- a/about/index.html
+++ b/about/index.html
@@ -50,9 +50,9 @@
             />
             <p>
               I'm Tim Spitzer, developer based in Berlin. I recently completed
-              my degree in Digital Media and Technology from the Technical
-              University Berlin and the Free University of Berlin. I have
-              previously worked as a software engineer at
+              my degree in Media Computer Science from the Technical University
+              Berlin and the Free University of Berlin. I have previously worked
+              as a software engineer at
               <a href="https://spreeewunder.com">Spreewunder</a> and I am
               currently working as freelance web developer.
             </p>
