--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <article>
             <h1 id="short-intro-text" class="col-white over-overlay">
               Hi, I am Tim.<br />
-              <mark class="bg-col-yellow">Frontend Developer</mark>
+              <mark class="bg-col-yellow">Fullstack Developer</mark>
               and
               <br />
-              <mark class="bg-col-green"> Digital Media and Technology</mark>
+              <mark class="bg-col-green"> Media Computer Science</mark>
               graduate
             </h1>
             <p>
