--- a/projects/project-1/index.html
+++ b/projects/project-1/index.html
@@ -70,7 +70,7 @@
             <p>
               This included following the design guide to accomplish the overall
               look and feel of the software, as well as implementing the user
-              experiencen. I also developed interactive features and
+              experience. I also developed interactive features and
               visualizations to enhance the functionality of the software. I
               worked closely with the backend developers to ensure that the
               frontend interface was properly integrated with the underlying
