--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <mark class="bg-col-yellow">Fullstack Developer</mark>
               and
               <br />
-              <mark class="bg-col-green"> TEsssssst</mark>
+              <mark class="bg-col-green"> Test 2</mark>
               graduate
             </h1>
             <p>
