added classes for spacing articles

--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
           </nav>
         </div>
         <main>
-          <article>
+          <article class="about">
             <h1>About</h1>
             <img
               class="img-small"
