--- a/projects/project-1/index.html
+++ b/projects/project-1/index.html
@@ -41,9 +41,8 @@
           </nav>
         </div>
         <main>
-          <article>
+          <article class="project">
             <h1>Videoüberwachung 2.0</h1>
-            <h4>Project Description</h4>
             <p>
               <a href="https://www.adeck-systems.de/produktportfolio"
                 >Videoüberwachung 2.0</a
