--- a/projects/project-2/index.html
+++ b/projects/project-2/index.html
@@ -41,9 +41,9 @@
           </nav>
         </div>
         <main>
-          <article>
+          <article class="project">
             <h1>Videosprechstunde</h1>
-            <h4>Project Description</h4>
+
             <p>
               <a href="https://video.epikur.de/">Videosprechstunde</a>
               is a fully integrated video teletherapy solution for mental health
