--- a/projects/project-3/index.html
+++ b/projects/project-3/index.html
@@ -41,9 +41,9 @@
           </nav>
         </div>
         <main>
-          <article>
+          <article class="project">
             <h1>SECUVID</h1>
-            <h4>Project Description</h4>
+
             <p>
               <a href="https://secuvid.com/">SECUVID</a>
               is a web-based video communication system that allows for easy
