--- a/projects/index.html
+++ b/projects/index.html
@@ -42,7 +42,7 @@
         </div>
         <main>
           <a href="/projects/project-3/">
-            <article>
+            <article class="project-overview">
               <h1>SECUVID</h1>
               SECUVID is a web-based video communication system that allows for
               easy communication with enhanced confidentiality protection.
@@ -56,7 +56,7 @@
             </article>
           </a>
           <a href="/projects/project-2/">
-            <article>
+            <article class="project-overview">
               <h1>Videosprechstunde</h1>
               Videosprechstunde is a fully integrated video teletherapy solution
               for mental health professionals and doctors. It allows them to
@@ -70,7 +70,7 @@
             </article>
           </a>
           <a href="/projects/project-1/">
-            <article>
+            <article class="project-overview">
               <h1>Videoüberwachung 2.0</h1>
               <p>
                 Videoüberwachung 2.0 is a surveillance software that aims to
