--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <title>Tim Spitzer</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/styles.css" />
-    <script type="module" src="/script.js"></script>
   </head>
   <body class="disable-scroll">
     <div class="overlay background"></div>
@@ -50,7 +49,7 @@
               and
               <br />
               <mark class="bg-col-green"> Media Computer Science</mark>
-              graduate
+              graduate.
             </h1>
             <p>
               I'm a software engineer from Berlin. I previously worked at
@@ -80,4 +79,5 @@
       </footer>
     </div>
   </body>
+  <script type="text/javascript" src="/script.js"></script>
 </html>
