made all links relative for gh pages

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/images/apple-touch-icon.png"
+      href="./images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/images/favicon-16x16.png"
+      href="./images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
     <title>Tim Spitzer</title>
-    <link rel="stylesheet" href="/reset.css" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body class="disable-scroll">
     <div class="overlay background"></div>
@@ -36,8 +36,8 @@
           </header>
           <nav>
             <ul>
-              <li><a href="/projects/">Projects</a></li>
-              <li><a href="/about/">About</a></li>
+              <li><a href="./projects/">Projects</a></li>
+              <li><a href="./about/">About</a></li>
             </ul>
           </nav>
         </div>
@@ -60,7 +60,7 @@
             </p>
             <p>
               Check out my
-              <a href="/projects/">projects</a> or contact me at
+              <a href="./projects/">projects</a> or contact me at
               <a href="mailto:mail@timspitzer.com">mail@timspitzer.com</a>.
             </p>
           </article>
@@ -72,12 +72,12 @@
           <!-- TODO: Maybe replave with social links -->
           <ul>
             <li>
-              <a href="/imprint/"><small>Imprint</small></a>
+              <a href="./imprint/"><small>Imprint</small></a>
             </li>
           </ul>
         </div>
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="/script.js"></script>
+  <script type="text/javascript" src="./script.js"></script>
 </html>
