--- a/projects/index.html
+++ b/projects/index.html
@@ -7,41 +7,41 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/images/apple-touch-icon.png"
+      href="./images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/images/favicon-32x32.png"
+      href="../images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/images/favicon-16x16.png"
+      href="../images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="../site.webmanifest" />
     <title>Projects - Tim Spitzer</title>
-    <link rel="stylesheet" href="/reset.css" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <div class="content">
       <div class="top-main-container">
         <div class="top-container">
           <header>
-            <a href="/">Tim Spitzer</a>
+            <a href="../">Tim Spitzer</a>
           </header>
           <nav>
             <ul>
-              <li><a href="/projects/">Projects</a></li>
-              <li><a href="/about/">About</a></li>
+              <li><a href="./">Projects</a></li>
+              <li><a href="../about/">About</a></li>
             </ul>
           </nav>
         </div>
         <main>
-          <a href="/projects/project-3/">
+          <a href="./project-3/">
             <article class="project-overview">
               <h1>SECUVID</h1>
               SECUVID is a web-based video communication system that allows for
@@ -49,13 +49,13 @@
               SECUVID uses end-to-end encryption to protect audio and video
               data..
               <img
-                src="/projects/project-3/images/call.webp"
+                src="./project-3/images/call.webp"
                 alt="picture of the apps call screen"
               />
               <small>Read more.. »</small>
             </article>
           </a>
-          <a href="/projects/project-2/">
+          <a href="./project-2/">
             <article class="project-overview">
               <h1>Videosprechstunde</h1>
               Videosprechstunde is a fully integrated video teletherapy solution
@@ -63,13 +63,13 @@
               easily conduct online therapy sessions from any location by
               meeting with..
               <img
-                src="/projects/project-2/images/login.webp"
+                src="./project-2/images/login.webp"
                 alt="picture of the apps login screen"
               />
               <small>Read more.. »</small>
             </article>
           </a>
-          <a href="/projects/project-1/">
+          <a href="./project-1/">
             <article class="project-overview">
               <h1>Videoüberwachung 2.0</h1>
               <p>
@@ -78,7 +78,7 @@
                 monitoring a variety of cameras from different..
               </p>
               <img
-                src="/projects/project-1/images/TV.webp"
+                src="./project-1/images/TV.webp"
                 alt="picture of the apps lockscreen"
               />
               <small>Read more.. »</small>
@@ -91,7 +91,7 @@
         <div>
           <ul>
             <li>
-              <a href="/imprint/"><small>Imprint</small></a>
+              <a href="../imprint/"><small>Imprint</small></a>
             </li>
           </ul>
         </div>
