--- a/projects/project-3/index.html
+++ b/projects/project-3/index.html
@@ -7,36 +7,36 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/images/apple-touch-icon.png"
+      href="../../images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/images/favicon-32x32.png"
+      href="../../images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/images/favicon-16x16.png"
+      href="../../images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="../../site.webmanifest" />
     <title>SECUVID - Tim Spitzer</title>
-    <link rel="stylesheet" href="/reset.css" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../../styles.css" />
   </head>
   <body>
     <div class="content">
       <div class="top-main-container">
         <div class="top-container">
           <header>
-            <a href="/">Tim Spitzer</a>
+            <a href="../../">Tim Spitzer</a>
           </header>
           <nav>
             <ul>
-              <li><a href="/projects/">Projects</a></li>
-              <li><a href="/about/">About</a></li>
+              <li><a href="../../projects/">Projects</a></li>
+              <li><a href="../../about/">About</a></li>
             </ul>
           </nav>
         </div>
@@ -106,7 +106,7 @@
         <div>
           <ul>
             <li>
-              <a href="/imprint/"><small>Imprint</small></a>
+              <a href="../../imprint/"><small>Imprint</small></a>
             </li>
           </ul>
         </div>
