--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./images/apple-touch-icon.png"
+      href="../images/apple-touch-icon.png"
     />
     <link
       rel="icon"
